fix docs code editor layout on mobile

--- a/packages/lume/docs/styles/live-code.css
+++ b/packages/lume/docs/styles/live-code.css
@@ -13,12 +13,6 @@
 		height: calc(100vh - 340px); /* TODO we need a technique so we don't hard code this value 340px value. */
 	}
 }
-@media (max-width: 767px) {
-	.live-code.full {
-		display: flex;
-		flex-direction: column-reverse;
-	}
-}
 
 .live-code-reset:not(.live-code-smaller *),
 .live-code-rerun:not(.live-code-smaller *) {
